--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,8 +33,8 @@ body {
     grid-template-areas:
         "nav header header"
         "nav main side";
-        grid-template-columns: 287px 1fr 185px;
-        grid-gap: 30px;
+    grid-template-columns: 287px 1fr 185px;
+    grid-gap: 30px;
 }
 
 header {
@@ -60,6 +60,7 @@ header {
 
 .header-home img {
     vertical-align: bottom;
+    cursor: pointer;
 }
 
 header input {
@@ -112,6 +113,11 @@ nav {
 .nav-bar-logo {
     padding-bottom: 18px;
 }
+
+.nav-bar-logo img {
+    cursor: pointer;
+}
+
 
 .nav-bar-profile {
     display: flex;
@@ -192,6 +198,7 @@ nav {
     font-size: var(--size-14);
     line-height: var(--size-16);
     font-family: 'Work Sans', sans-serif;
+    cursor: pointer;
 }
 
 .nav-pinned-title {
@@ -234,16 +241,22 @@ nav {
     gap: 32px;
 }
 
+.nav-see-more-wrapper button {
+    cursor: pointer;
+}
+
 .nav-see-more-wrapper {
     display: flex;
     gap: 16px;
     align-items: center;
     padding-top: 33px;
 }
-main{
+
+main {
     grid-area: main;
 }
-section{
+
+section {
     display: grid;
     gap: 40px;
 }
@@ -292,16 +305,19 @@ section{
     line-height: var(--size-14);
     font-family: 'Work Sans', sans-serif;
     padding-left: 5px;
+    cursor: pointer;
 }
 
 .top-section-icons:not(:last-child) {
     border-right: 1px solid #EBEBEB;
 }
 
+
 .share-button {
     background: var(--main-color);
     padding: 11px 35px 12px 21px;
     border-radius: 20px;
+    cursor: pointer;
 }
 
 .share-button span {
@@ -378,6 +394,7 @@ h4 {
     text-decoration: underline #1F50FF;
     font-family: 'Work Sans', sans-serif;
     font-weight: var(--font-weight-semi-bold);
+    cursor: pointer;
 }
 
 .profile-wrapper-2nd {
@@ -411,7 +428,6 @@ aside {
     border-radius: 10px;
     background-color: #FFFFFF;
     padding: 21px 22px 203px;
-    /* grid-area: side; */
 }
 
 .side-bar-top {
@@ -489,6 +505,7 @@ h6 {
     display: flex;
     flex-direction: column;
     gap: 14px;
+    cursor: pointer;
 
 }
 
@@ -498,12 +515,14 @@ h6 {
     gap: 37px;
 }
 
-.profile-names li {
+.profile-names li,
+.side-bar-bottom  span{
     color: #303030;
     font-size: 10px;
     line-height: 11px;
     font-family: 'Work Sans', sans-serif;
     font-weight: var(--font-weight-semi-bold);
+    cursor: pointer;
 }
 
 .side-bar-bottom-wrapper {
@@ -522,6 +541,7 @@ h6 {
 .side-bar-bottom-icons {
     border-radius: 50%;
     background-color: #E9E9E9;
-    padding: 11px 8px;
+    padding: 9px 6px;
+    cursor: pointer;
 
 }
